--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.emgr.geartronix.GalleryActivity">
+    tools:context="com.emgr.geartronix.activities.GalleryActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
