--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:padding="20dp"
     android:focusableInTouchMode="true"
     android:background="@drawable/page_background"
-    tools:context="com.emgr.geartronix.MainActivity">
+    tools:context="com.emgr.geartronix.activities.LoginActivity">
 
     <include layout="@layout/medium_label"
              android:id="@+id/txtBox1" />
