--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="SplashTheme">
+        <item name="android:background">@drawable/bg1</item>
+    </style>
 
     <style name="geartronixLabel">
         <item name="android:layout_marginTop">10dp</item>
