mvp general refactor

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,8 @@
     <Button style="@style/mediumButton"
             android:id="@+id/btnLogin"
             android:text="@string/sign_in"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+            android:onClick="handleButtonsClickedEvent"/>
 
 </LinearLayout>
 
