--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -108,7 +108,7 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/lrgViewMenuStrip"
             android:src="@android:drawable/ic_lock_lock"
-            android:background="@color/test_light"/>
+            android:background="@color/blue_one"/>
 
 
     </RelativeLayout>
