--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,12 @@
         <item name="android:textSize">@dimen/medium_font_size</item>
     </style>
 
+    <style name="forgotPasswordLabel" parent="mediumLabel">
+        <item name="android:textColor">@color/blue_one</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+    </style>
+
     <style name="geartronixTextBox">
         <item name="android:layout_marginTop">10dp</item>
 
