--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,49 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/appBackground">
+    android:layout_height="match_parent">
 
-<LinearLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/frmLoginBottom">
+
+        <ScrollView
+            android:id="@+id/scrLogin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/appBackground">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/page_background"
+                android:focusableInTouchMode="true"
+                android:orientation="vertical"
+                android:padding="20dp"
+                tools:context="com.emgr.geartronix.activities.LoginActivity">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    app:srcCompat="@drawable/logo"/>
+
+                <TextView
+                    style="@style/mediumLabel"
+                    android:text="@string/username"/>
+
+                <EditText
+                    android:id="@+id/txtUsername"
+                    style="@style/mediumTextBox"/>
+
+                <TextView
+                    style="@style/mediumLabel"
+                    android:text="@string/password"/>
+
+                <EditText
+                    android:id="@+id/txtPassword"
+                    style="@style/mediumTextBox"/>
+
+                <Button
+                    android:id="@+id/btnLogin"
+                    style="@style/mediumButton"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="30dp"
+                    android:onClick="handleButtonsClickedEvent"
+                    android:text="@string/sign_in"/>
+
+                <TextView
+                    android:id="@+id/txtForgotPassword"
+                    style="@style/forgotPasswordLabel"
+                    android:onClick="handleButtonsClickedEvent"
+                    android:text="@string/forgot_password"
+                    android:textAlignment="center"/>
+
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </FrameLayout>
+
+<FrameLayout
+    android:id="@+id/frmLoginBottom"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:focusableInTouchMode="true"
-    android:background="@drawable/page_background"
-    tools:context="com.emgr.geartronix.activities.LoginActivityLoginView">
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:background="@color/login_bottom_background">
 
-    <TextView style="@style/mediumLabel"
-              android:text="@string/username" />
+    <TextView   style="@style/mediumLabel"
+                android:id="@+id/btnRegister"
+                android:text="@string/create_a_new_account"
+                android:layout_width="match_parent"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="20dp"
+                android:onClick="handleButtonsClickedEvent"/>
+</FrameLayout>
 
-    <EditText android:id="@+id/txtUsername"
-              style="@style/mediumTextBox" />
 
-    <TextView style="@style/mediumLabel"
-              android:text="@string/password" />
 
-    <EditText android:id="@+id/txtPassword"
-              style="@style/mediumTextBox" />
-
-    <TextView android:id="@+id/txtForgotPassword"
-              style="@style/forgotPasswordLabel"
-              android:text="@string/forgot_password"
-              android:onClick="handleButtonsClickedEvent"/>
-
-    <Button style="@style/mediumButton"
-            android:id="@+id/btnLogin"
-            android:text="@string/sign_in"
-            android:layout_width="match_parent"
-            android:onClick="handleButtonsClickedEvent"/>
-
-    <Button style="@style/mediumButton"
-            android:id="@+id/btnRegister"
-            android:text="@string/register"
-            android:layout_width="match_parent"
-            android:onClick="handleButtonsClickedEvent"/>
-
-</LinearLayout>
-
-</ScrollView>
+</RelativeLayout>
