--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="appBackground">#222222</color>
     <color name="transBlack">#d80d0707</color>
 
+    <color name="login_bottom_background">#333333</color>
     <color name="blue_one">#0088cc</color>
     <color name="testGreen">#11aa11</color>
     <color name="test_dark">#003366</color>
