--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,6 +94,12 @@
                 android:onClick="handleButtonsClickedEvent"/>
 </FrameLayout>
 
-
+<include
+    android:id="@+id/frmLoadingScreen"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_alignParentBottom="true"
+    layout="@layout/loading_screen"
+    android:visibility="gone"/>
 
 </RelativeLayout>
