--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorTransparent">#0000ffcc</color>
+    <color name="colorTransparentBlack">#dc060606</color>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#111111</color>
     <color name="colorAccent">#333333</color>
