Added loading screen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,7 @@
 
                 <EditText
                     android:id="@+id/txtPassword"
+                    android:inputType="textWebPassword"
                     style="@style/mediumTextBox"/>
 
                 <Button
