--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="colorAccent">#333333</color>
     <color name="textWhite">#eeeeee</color>
     <color name="appBackground">#222222</color>
+    <color name="colorProgressBackgroud">#444444</color>
+    <color name="colorProgressBar">#555555</color>
     <color name="transBlack">#d80d0707</color>
 
     <color name="login_bottom_background">#333333</color>
