--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowBackground">@drawable/page_background_portrait</item>
     </style>
+
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowBackground">@drawable/gearbox</item>
+        <item name="android:windowBackground">@drawable/bg_portrait</item>
     </style>
 
     <style name="geartronixLabel">
@@ -65,10 +67,12 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
-    <style name="loadingSpinner" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">@color/blue_one</item>
+    <style name="loadingSpinner" parent="android:Widget.Holo.ProgressBar">
         <item name="android:textColorPrimary">@color/colorTransparent</item>
+        <item name="android:textColor">#daac56</item>
         <item name="android:background">@color/colorTransparent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
     <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
         <item name="android:textColor">#dddddd</item>
