--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,7 +27,7 @@
     </style>
 
     <style name="forgotPasswordLabel" parent="mediumLabel">
-        <item name="android:textColor">@color/blue_one</item>
+        <item name="android:textColor">#cccccc</item>
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:layout_marginBottom">5dp</item>
     </style>
