--- a/app/src/main/res/layout/splash_content.xml
+++ b/app/src/main/res/layout/splash_content.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Welcome"
+            android:typeface="monospace"
             android:textColor="@color/textWhite"
             android:textSize="30dp"
             android:textAlignment="center"
