changed splash screen contents

--- a/app/src/main/res/layout/activity_dashboard2.xml
+++ b/app/src/main/res/layout/activity_dashboard2.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.emgr.geartronix.activities.DashboardActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Welcome"
-        tools:layout_editor_absoluteY="203dp"
-        tools:layout_editor_absoluteX="151dp"/>
-</android.support.constraint.ConstraintLayout>
+    <android.support.v4.widget.DrawerLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingEnd="60dp"
+        android:paddingRight="60dp"
+        tools:openDrawer="start">
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorTransparentBlack">
+
+        </FrameLayout>
+    </android.support.v4.widget.DrawerLayout>
+
+</FrameLayout>
