--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/loadingScreen"
+             android:animateLayoutChanges="true"
+             android:clickable="true"
              android:background="@color/colorTransparentBlack">
 
     <LinearLayout
