--- a/app/src/main/res/menu/dashboard_main_menu.xml
+++ b/app/src/main/res/menu/dashboard_main_menu.xml
@@ -3,6 +3,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_services"
+        android:orderInCategory="100"
+        android:title="@string/services"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/action_gallery"
         android:orderInCategory="100"
         android:title="@string/Gallery"
