--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -20,7 +20,8 @@
 
     </group>
 
-    <item android:title="Communicate">
+    <item
+        android:title="Communicate">
         <menu>
             <item
                 android:id="@+id/nav_share"
