--- a/app/src/main/res/layout/home_tile_item.xml
+++ b/app/src/main/res/layout/home_tile_item.xml
@@ -3,14 +3,15 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/colorTransparentBlack"
+              android:background="@color/tileTransBlack"
               android:orientation="vertical"
               android:paddingBottom="11dp"
               android:paddingEnd="8dp"
               android:paddingLeft="8dp"
               android:paddingRight="8dp"
               android:paddingStart="8dp"
-              android:paddingTop="7dp">
+              android:paddingTop="7dp"
+              android:onClick="onTileClicked">
 
     <ImageView
         android:id="@+id/imgHomeTile"
