--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -10,15 +10,34 @@
     tools:showIn="@layout/app_bar_home">
 
 
-    <GridView
-        android:id="@+id/grdHomeTiles"
-        android:layout_width="300dp"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnWidth="130dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:horizontalSpacing="10dp"
-        android:verticalSpacing="10dp" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
+
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/largeLabel"
+            android:layout_marginBottom="40dp"
+            android:text="Choose an activity"
+            android:textAlignment="center"/>
+
+
+        <GridView
+            android:id="@+id/grdHomeTiles"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnWidth="130dp"
+            android:horizontalSpacing="10dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="10dp"/>
+
+
+    </LinearLayout>
 
 </FrameLayout>
