--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -21,7 +21,7 @@
     </group>
 
     <item
-        android:title="Communicate">
+        android:title="">
         <menu>
             <item
                 android:id="@+id/nav_share"
