--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.emgr.geartronix.activities.HomeActivity"
-    tools:showIn="@layout/app_bar_home">
+    tools:context="com.emgr.geartronix.activities.HomeActivity">
 
 
     <LinearLayout
