--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -18,23 +18,36 @@
 
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/txtHomeHeader"
             style="@style/largeLabel"
+            android:layout_marginTop="40dp"
             android:layout_marginBottom="40dp"
             android:text="Choose an activity"
             android:textAlignment="center"/>
 
 
-        <GridView
-            android:id="@+id/grdHomeTiles"
+        <FrameLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:columnWidth="130dp"
-            android:horizontalSpacing="10dp"
-            android:numColumns="auto_fit"
-            android:stretchMode="columnWidth"
-            android:verticalSpacing="10dp"/>
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/imgSelectedActivity"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:srcCompat="@drawable/close_icon"
+                android:visibility="invisible"/>
+
+            <GridView
+                android:id="@+id/grdHomeTiles"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:columnWidth="130dp"
+                android:horizontalSpacing="10dp"
+                android:numColumns="auto_fit"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="10dp"/>
+        </FrameLayout>
 
 
     </LinearLayout>
