--- a/app/src/main/res/menu/dashboard_main_menu.xml
+++ b/app/src/main/res/menu/dashboard_main_menu.xml
@@ -3,14 +3,16 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_services"
+        android:id="@+id/action_signout"
         android:orderInCategory="100"
-        android:title="@string/services"
+        android:enabled="false"
+        android:visible="false"
+        android:title="@string/sign_out"
         app:showAsAction="never"/>
 
     <item
-        android:id="@+id/action_gallery"
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/Gallery"
+        android:title="@string/settings"
         app:showAsAction="never"/>
 </menu>
