--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -19,9 +19,14 @@
 
         </RelativeLayout>
 
-        <GridView
+        <GridView android:id="@+id/grdvImageContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:columnWidth="130dp"
+            android:horizontalSpacing="0dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="0dp"
             android:layout_below="@+id/relativeLayout"/>
 
     </RelativeLayout>
