--- a/app/src/main/res/layout/gallery_item_view.xml
+++ b/app/src/main/res/layout/gallery_item_view.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:orientation="vertical">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imgPic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorRed"
         app:srcCompat="@mipmap/ic_launcher"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/txtDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
