--- a/app/src/main/res/layout/gallery_item_view.xml
+++ b/app/src/main/res/layout/gallery_item_view.xml
@@ -9,7 +9,8 @@
         android:id="@+id/imgPic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorRed"
+        android:background="@color/colorPrimaryDark"
+        android:scaleType="fitCenter"
         app:srcCompat="@mipmap/ic_launcher"/>
 
     <TextView
