--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,13 +57,13 @@
                     style="@style/mediumButton"
                     android:layout_width="match_parent"
                     android:layout_marginTop="30dp"
-                    android:onClick="onButtonClickedEvent"
+                    android:onClick="onViewClickedEvent"
                     android:text="@string/sign_in"/>
 
                 <TextView
                     android:id="@+id/txtForgotPassword"
                     style="@style/forgotPasswordLabel"
-                    android:onClick="onButtonClickedEvent"
+                    android:onClick="onViewClickedEvent"
                     android:text="@string/forgot_password"
                     android:textAlignment="center"/>
 
@@ -89,7 +89,7 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:paddingLeft="20dp"
-                    android:onClick="onButtonClickedEvent"/>
+                    android:onClick="onViewClickedEvent"/>
     </FrameLayout>
 
     <include
