--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -64,7 +64,7 @@
                     app:srcCompat="@android:drawable/ic_menu_share"/>
 
                 <ImageButton
-                    android:id="@+id/imgBtnEnlarge"
+                    android:id="@+id/imgBtnSavePic"
                     android:layout_width="@dimen/gallery_controll_icon_size"
                     android:layout_height="@dimen/gallery_controll_icon_size"
                     android:layout_marginLeft="@dimen/gallery_control_icon_spacing"
