--- a/app/src/main/res/layout/gallery_item_view.xml
+++ b/app/src/main/res/layout/gallery_item_view.xml
@@ -3,6 +3,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="150dp"
+             android:id="@+id/frmGalleryItem"
              android:orientation="vertical">
 
     <ImageButton
@@ -12,7 +13,7 @@
         android:layout_gravity="center"
         android:background="@color/colorPrimaryDark"
         android:onClick="onViewClickedEvent"
-        android:scaleType="fitCenter"
+        android:scaleType="fitStart"
         app:srcCompat="@color/colorTransparent"/>
 
     <ProgressBar
@@ -30,10 +31,9 @@
         android:orientation="horizontal"
         android:padding="10dp">
 
-        <ImageView
+        <ImageView android:id="@+id/imgGalleryItem"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:onClick="onViewClickedEvent"
             android:scaleType="fitXY"
             app:srcCompat="@android:drawable/ic_menu_add"/>
 
