--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:background="@color/colorTransparentBlack"
-            android:scaleType="fitStart"
+            android:scaleType="fitXY"
             android:visibility="gone"
             app:srcCompat="@android:drawable/ic_menu_share"/>
 
