--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -1,54 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout android:id="@+id/menuContentHomeID"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/menuContentHomeID"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="50dp"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/relativeLayout"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="10dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="50dp"
-        android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/txtHomeHeader"
-            style="@style/largeLabel"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="40dp"
-            android:text="@string/choose_an_activity"
-            android:textAlignment="center"/>
-
-
-        <FrameLayout
-            android:layout_width="300dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:layout_alignParentTop="true"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="17dp"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imgSelectedActivity"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                app:srcCompat="@drawable/close_icon"
-                android:visibility="invisible"/>
 
-            <GridView
-                android:id="@+id/grdHomeTiles"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/txtHomeHeader"
+                style="@style/largeLabel"
+                android:layout_marginBottom="30dp"
+                android:layout_marginTop="30dp"
+                android:text="@string/choose_an_activity"
+                android:textAlignment="center"
+                android:visibility="gone"/>
+
+
+            <FrameLayout
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:columnWidth="130dp"
-                android:horizontalSpacing="10dp"
-                android:numColumns="auto_fit"
-                android:stretchMode="columnWidth"
-                android:verticalSpacing="10dp"/>
-        </FrameLayout>
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:id="@+id/imgSelectedActivity"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:visibility="invisible"
+                    app:srcCompat="@drawable/close_icon"/>
+
+                <GridView
+                    android:id="@+id/grdHomeTiles"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:columnWidth="130dp"
+                    android:horizontalSpacing="10dp"
+                    android:numColumns="auto_fit"
+                    android:stretchMode="columnWidth"
+                    android:verticalSpacing="10dp"/>
+            </FrameLayout>
 
 
-    </LinearLayout>
+        </LinearLayout>
 
-</FrameLayout>
+    </FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#222222"
+        android:id="@+id/relativeLayout">
+
+        <ImageView
+            android:id="@+id/imgUserPic"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:background="@android:color/black"
+            android:scaleType="fitXY"
+            app:srcCompat="@mipmap/user_icon"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="17dp"
+            android:layout_toRightOf="@+id/imgUserPic"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txtUserGreet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Username"
+                android:textColor="@color/textWhite"
+                android:textSize="16dp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/txtUserMsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Welcome please choose an activity..."
+                android:textColor="@color/textWhite"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</RelativeLayout>
