--- a/app/src/main/res/menu/dashboard_main_menu.xml
+++ b/app/src/main/res/menu/dashboard_main_menu.xml
@@ -12,7 +12,15 @@
 
     <item
         android:id="@+id/action_settings"
+        android:icon="@drawable/settings_icon"
         android:orderInCategory="100"
         android:title="@string/settings"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="always"/>
 </menu>
