Added focus checker

--- a/app/src/main/res/layout/home_tile_item.xml
+++ b/app/src/main/res/layout/home_tile_item.xml
@@ -11,7 +11,7 @@
               android:paddingRight="8dp"
               android:paddingStart="8dp"
               android:paddingTop="7dp"
-              android:onClick="onTileClicked">
+              android:onClick="onViewClickedEvent">
 
     <ImageView
         android:id="@+id/imgHomeTile"
