--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -5,6 +5,7 @@
                 android:id="@+id/menuContentHomeID"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/transBlack"
                 android:paddingTop="50dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
@@ -64,11 +65,11 @@
     </FrameLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="#222222"
-        android:id="@+id/relativeLayout">
+        android:background="#222222">
 
         <ImageView
             android:id="@+id/imgUserPic"
