--- a/app/src/main/res/layout/home_tile_item.xml
+++ b/app/src/main/res/layout/home_tile_item.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:background="@color/tileTransBlack"
+              android:background="@color/colorgreyBg"
               android:orientation="vertical"
               android:paddingBottom="11dp"
               android:paddingEnd="8dp"
