--- a/app/src/main/res/menu/profile_menu.xml
+++ b/app/src/main/res/menu/profile_menu.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/settings_icon"
+        android:orderInCategory="100"
+        android:title="@string/edit"
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/action_edit"
         android:icon="@android:drawable/ic_menu_edit"
         android:orderInCategory="100"
         android:title="@string/edit"
         app:showAsAction="always"/>
+
 </menu>
